gitops/apps/mlops/istio/virtualservice.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: mlops
spec:
  hosts:
  - mlops.adimen.local
  gateways:
  - mlops
  http:
  - match:
    - uri:
        prefix: /auth
    route:
    - destination:
        host: keycloak-service.keycloak.svc.cluster.local
        port:
          number: 8080
  - match:
    - uri:
        prefix: /oauth2
    route:
    - destination:
        host: oauth2-proxy.oauth2-proxy.svc.cluster.local
        port:
          number: 4180
  - route:
    - destination:
        host: echoserver.default.svc.cluster.local
        port:
          number: 80
