gitops/apps/mlops/istio/authentication.yaml
---
apiVersion: security.istio.io/v1beta1
kind: RequestAuthentication
metadata:
  name: istio-default
  namespace: default
spec:
  selector:
    matchLabels:
      app: istio-ingressgateway  # Default ingressgateway
  jwtRules:
  - issuer: "https://mlops.adimen.tech/realms/mlops"
    jwksUri: "https://mlops.adimen.tech/realms/mlops/protocol/openid-connect/certs"
    forwardOriginalToken: true
---
apiVersion: security.istio.io/v1beta1
kind: RequestAuthentication
metadata:
  name: mlops-api
  namespace: mlops
spec:
  selector:
    matchLabels:
      app: instance-service
  jwtRules:
  - issuer: "https://mlops.adimen.tech/realms/mlops"
    jwksUri: "https://mlops.adimen.tech/realms/mlops/protocol/openid-connect/certs"
    forwardOriginalToken: true
---
apiVersion: security.istio.io/v1beta1
kind: AuthorizationPolicy
metadata:
  name: mlops-api
  namespace: mlops
spec:
  selector:
    matchLabels:
      app: instance-service
  action: CUSTOM
  provider:
    # Extension provider configured when we installed Istio
    name: oauth2-proxy
  rules:
  - {}
